system2/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: system
spec:
  hosts:
    - "system2.app.rwx.systems"
  gateways:
    - system-gateway
  http:
    - match:
        - uri:
            prefix: /opa/
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 8181
            host: opa
    - match:
        - uri:
            prefix: /app/
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 3000
            host: http-app1-service
